# PySeVal

./: .env  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
pyseval/: cli.py  config.py  executor.py  io.py  model.py  services.py
tests/integration/: test_pbi_service_executor.py  test_services.py
tests/integration/pyseval_test_power_bi_report/pyseval_test_power_bi_report.Dataset/: diagramLayout.json  item.config.json  item.metadata.json  model.bim
tests/integration/pyseval_test_power_bi_report/pyseval_test_power_bi_report.Dataset/.pbi/: cache.abf  localSettings.json
tests/integration/pyseval_test_power_bi_report/pyseval_test_power_bi_report.Report/: definition.pbir  item.config.json  item.metadata.json  report.json
tests/integration/pyseval_test_power_bi_report/pyseval_test_power_bi_report.Report/.pbi/: localSettings.json
tests/unit/: test_cli.py  test_executor.py  test_io.py  test_model.py
tests/validations_spec_test_files/: invalid_pyseval_validations_spec1.json  invalid_pyseval_validations_spec2.json  non_json_file.txt  valid_pyseval_validations_spec1.json  valid_pyseval_validations_spec1.result.json
